# zhwiki_nomination_daily_digest

./: .gitignore  CLAUDE.md  LICENSE.txt  config.example.yaml  pyproject.toml  requirements.txt  ~old_votes
zhwiki_nomination_daily_digest/newsletters/: __init__.py  dykc.py
zhwiki_nomination_daily_digest/parsers/: dykc.py
zhwiki_nomination_daily_digest/runners/: __init__.py  dykc.py
zhwiki_nomination_daily_digest/telegram/: __init__.py  dykc.py
zhwiki_nomination_daily_digest/utils/: __init__.py  dykc.py
